--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "index.js",
     "dependencies": {
         "csv-writer": "^1.6.0",
-        "puppeteer": "^13.6.0"
+        "puppeteer": "^21.5.0"
     },
     "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node index.js"
     },
     "author": "",
     "license": "ISC"
